json data load on html page

--- a/students_grade_app/public/index.html
+++ b/students_grade_app/public/index.html
@@ -51,6 +51,7 @@
                 </form>
             </div>
         </div>
+        <a href="/jsonData">Load Json Data</a>
     </div>
 
     <div class="result-div" style="display: none;">
